Fix z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,10 @@ h3 {
   height: 40px;
 }
 
+.menuList {
+  z-index: 3;
+}
+
 /* RWD pc mobile switch */
 .desktop {
   display: inherit;
